frontend/src/output.css
@import "tailwindcss";

@theme {
  --color-primary: #ad1457;
  --color-secondary: #ffedd5;

  --font-sans: "Raleway", sans-serif;
  --font-mono: "Inconsolata", monospace;

  --shadow-overlay: 0 0 0 9999px #00000040;
}

html {
  @apply font-sans;
}

body {
  @apply flex flex-col gap-4 p-8;
}

h1 {
  @apply mt-2 text-3xl font-bold;
}

h2 {
  @apply mt-2 text-2xl font-bold;
}

h3 {
  @apply mt-2 text-xl font-bold;
}

h4 {
  @apply mt-2 text-lg font-bold;
}

h5 {
  @apply mt-2 text-base font-bold;
}

h6 {
  @apply mt-2 text-base font-bold;
}

a {
  @apply text-primary underline hover:text-black;
}

img {
  @apply max-h-50 max-w-100;
}

ul {
  @apply list-disc pl-6;
}

ol {
  @apply list-decimal pl-6;
}

li {
  @apply pl-2;
}

blockquote {
  @apply border-l-4 border-slate-200 pl-4 italic;
}

pre:has(code) {
  @apply bg-slate-700 p-2 font-mono text-white;
}

:not(pre) > code {
  @apply bg-slate-200 p-1 font-mono;
}

hr {
  @apply my-4 h-[2px] border-none bg-slate-200;
}

th,
td {
  @apply border-b border-slate-300 px-2 py-1;
}

